# esp32-tflite-person-detect

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/tfmicro/: CMakeLists.txt
components/tfmicro/tensorflow/lite/micro/tools/make/downloads/person_model_int8/: person_detect_model_data.cc
main/: CMakeLists.txt
main/src/: app_camera_esp.h  image_provider.cc  main.cc
main/src/camera/: app_camera_esp.cc
main/src/webserver/: server.cc  server.h
